Added check for maximum number

--- a/RomanNumerals/Base.lproj/Main.storyboard
+++ b/RomanNumerals/Base.lproj/Main.storyboard
@@ -712,7 +712,7 @@
                         <subviews>
                             <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5TP-7k-3oR">
                                 <rect key="frame" x="10" y="228" width="460" height="22"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Please, enter a decimal number to convert to Roman Numerals" drawsBackground="YES" id="uF8-Nu-vr0">
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Please, enter a number up to 10000" drawsBackground="YES" id="uF8-Nu-vr0">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
